--- a/styles/position-page.css
+++ b/styles/position-page.css
@@ -1,1 +1,102 @@
+nav {
+
+	background-color: grey;
+	height: 60px;
+	width: 100%;
+	position: fixed;
+
+}
+
+nav ul {
+
+	display: inline-block;
+
+}
+
+nav li {
+
+	display: inline-block;
+	list-style: none;
+
+}
+
+nav li::after {
+
+	content: "|";
+	margin-left: 5px;
+
+}
+
+nav .icon-img {
+
+	height: 50px;
+	border: 1px solid black;
+	border-radius: 50%;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	vertical-align: middle;
+
+}
+
+.containter {
+
+	padding-left: 60px;
+	padding-right: 60px;
+
+}
+
+body {
+
+	background: url(../images/outerspace_landscape.jpeg);
+	background-size: cover;
+
+}
+
+.box {
+
+	width: 600px;
+	height: 300px;
+	border: 10px green dotted;
+	margin-left: auto;
+	margin-right: auto;
+	position: relative;
+	margin-top: 150px;
+
+}
+
+main {
+
+	padding-top: 90px;
+	min-width: 1000px;
+
+}
+
+.cat, .dog {
+
+	position: absolute;
+	width: 200px;
+	height: 200px;
+
+}
+
+.cat {
+
+	top: -90px;
+	left: -90px;
+
+}
+
+.dog {
+
+	bottom: -120px;
+	right: -60px;
+
+}
+
+
+
+
+
+
+
 
